# amber-inferences

./: .flake8  .gitignore  .pre-commit-config.yaml  01_print_deployments.py  04_process_chunks.py  05_combine_outputs.py  LICENSE  README.md  combine_deployment_inferences.py  output_description.md  pyproject.toml  requirements.txt
archive/: 02_generate_keys.py  03_pre_chop_files.py  04_process_chunks.py  05_combine_outputs.py
examples/: comand_line_prompts.ipynb  dep000022_subset_keys.json  dep000072_subset_keys.json  regional_qc.ipynb  tutorial.ipynb
sandbox/: Deployment_summaries.ipynb  Example_inferences.ipynb  Region_summary.ipynb  Singapore_overview.ipynb  UK_overview.ipynb  all_regions.ipynb  check_missing_inferences.ipynb  check_outputs.ipynb  check_outputs_dylan.ipynb  check_outputs_exist.ipynb  combine_csvs.py  create_crops_from_boxes.ipynb  gif_creater.ipynb  harlequin_outputs.ipynb  inference_times.ipynb  order_binary_comparison.ipynb  orders_subset.ipynb  package_outputs.sh  regional_qc.ipynb  search_specific_moths.ipynb  singapore_combiner.ipynb
slurm_scripts/: UK_east_hendred_analysis.sh  UK_farralia_analysis.sh  agzero_run_2.sh  anguilla_final.sh  anguilla_run.sh  array_processor.sh  array_processor_no_flatbug.sh  combine_harlequin_outputs.sh  compute_costs.sh  costa_rica.sh  costa_rica_sbatch.sh  costarica_final.sh  flatbug_test.sh  harlequin.sh  japan_run.sh  kenya_final.sh  nettlebed.sh  panama.sh  panama_final.sh  panama_run.sh  process_chunks_cri.sh  process_chunks_pan.sh  pymoor_run.sh  singapore.sh  singapore_analysis.sh  singapore_download.sh  singapore_final.sh  slurm_script.sh  solar_field_analysis.sh  test_final.sh  thailand.sh  thailand_final.sh
tests/: test_00_api_utils.py  test_00_config.py  test_00_count_utils.py  test_00_deployment.py  test_01_generating_keys.py  test_02_inference_cli.py  test_02_inference_scripts.py  test_api_utils.py  (+16 more)
(+29 files in other folders)
