[project]
name = "amber_inferences"
version = "0.0.1"
authors = [
  { name="Katriona Goldmann", email="kgoldmann@turing.ac.uk" },
]
description = "Package to perform inferences on JASMIN"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://www.turing.ac.uk/research/research-projects/amber-ai-assisted-monitoring-biodiversity-using-edge-processing-and"
Issues = "https://github.com/AMI-system/amber-inferences/issues"
