[project]
name = "amber_inferences"
version = "0.0.1"
authors = [
  { name="Katriona Goldmann", email="kgoldmann@turing.ac.uk" },
]
description = "A package to perform species classification on JASMIN"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
amber-deployments = "amber_inferences.cli.deployments:main"
amber-keys = "amber_inferences.cli.generate_keys:main"
amber-inferences = "amber_inferences.cli.perform_inferences:main"

[project.urls]
Homepage = "https://github.com/AMI-system/amber-inferences"
Issues = "https://github.com/AMI-system/amber-inferences/issues"
